Closed
Bug 1540821
Opened 6 years ago
Closed 6 years ago
`firefox --profile /tmp/padding --no-remote` no longer starts a new Firefox instance with the different profile
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla68
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox66 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | + | fixed |
People
(Reporter: MattN, Assigned: mozilla)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
1.21 KB,
patch
|
spohl
:
review+
|
Details | Diff | Splinter Review |
STR:
- Launch FirefoxNightly.app from the dock with the default profile
- Run
/Applications/FirefoxNightly.app/Contents/MacOS/firefox --profile /tmp/paddingfrom the command line
- I have never needed to use
--no-remoteor--new-instancebefore but they don't seem to help either
Expected result:
A new instance of Nightly is started with the /tmp/padding profile.
Actual result:
A new window is opened in my default Nightly profile.
[Tracking Requested - why for this release]: Usability regression for Fx devs.
| Reporter | ||
Comment 1•6 years ago
|
||
From reading the patch I see that the problem is that it's only handling -no-remote (one hyphen), not --no-remote (two hyphens):
if ([arg isEqualToString:@"-no-remote"] || [arg isEqualToString:@"-headless"]) {
The workaround is to only use one hyphen which goes against our command line help which all use --…
| Reporter | ||
Comment 3•6 years ago
|
||
Yuri, please attach your patch here which is only the difference from what already landed in bug 469990.
Hi Matthew, attached patch now correctly processes both --no-remote and --headless, as well as -no-remote and -headless.
Flags: needinfo?(MattN+bmo)
| Reporter | ||
Updated•6 years ago
|
Flags: needinfo?(MattN+bmo) → needinfo?(spohl.mozilla.bugs)
Comment 5•6 years ago
|
||
Comment on attachment 9055063 [details] [diff] [review]
thefix2.patch
Thanks! Will land this shortly.
Flags: needinfo?(spohl.mozilla.bugs)
Attachment #9055063 -
Flags: review+
Comment 6•6 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/d9e7edfc9ab11c9b6a0412872585545d4404c3b1
Bug 1540821: Accept `--no-remote` as equivalent of `-no-remote` and `--headless` as equivalent of `-headless` command line arguments on macOS. r=spohl
Comment 7•6 years ago
|
||
Attachment #9055063 -
Attachment is obsolete: true
Attachment #9055470 -
Flags: review+
Comment 8•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Updated•6 years ago
|
status-firefox66:
--- → unaffected
status-firefox67:
--- → unaffected
status-firefox-esr60:
--- → unaffected
Updated•6 years ago
|
Updated•6 years ago
|
Assignee: nobody → mozilla
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•