Bug 1540821: Accept `--no-remote` as equivalent of `-no-remote` and `--headless` as equivalent of `-headless` command line arguments on macOS. r=spohl